# swift-paperless

./: .conflict-files  .gitattributes  .gitignore  .pre-commit-config.yaml  .swiftformat  Gemfile  Justfile  README.md  bump.py  bump.sh  changelog.md  changelog.txt  changelog_header.md  ci_post_clone.sh  cliff.toml  crowdin.yml  current_changelog.txt  docker-compose.screenshot.yml  filter_rules.swift.jinja2  frames.toml  generate_filterrules.py  generate_localized_keys.py  localized_keys.yml  logo.afdesign  mkdocs.yml  notes.md  privacy.md  project.yml  run_screenshots.py  screenshots.toml  xcstrings_to_csv.py
.auto-resolution/: Justfile  LICENSE  crowdin.yml  screenshot_devices.toml  user-defaults.py
.conflict-base-0/: .gitignore  docker-compose.screenshot.yml
.conflict-side-0/: bezel_packs.toml  privacy.md
.conflict-side-1/: current_changelog.txt  fonts.toml  mkdocs.yml
AppShared/: Package.swift
Common/: Package.resolved  Package.swift
DataModel/: .gitignore  Package.resolved  Package.swift
Networking/: Package.swift  run-integration-tests.sh
OAuthTest/: ContentView.swift  Info.plist  OAuthTestApp.swift  PaperlessOIDCExample.swift
scripts/: beta.sh  build_docs_config.py  delayed_proxy.py  filter_rules.swift.jinja2  frame.py  generate_filterrules.py  i18n.py  pull_localizations.py  pyproject.toml  requirements.in  requirements.txt  string_catalog.py  translate_metadata.py
scripts/src/swpngx/: capture.py  cli.py  devices_cli.py  frame.py  pyproject.toml  text_wrap.py
scripts/src/swpngx/templates/: docker-compose.screenshot.yml.j2  preview.html
(+1080 files in other folders)
